--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,72 @@
-<p>server created</p>
+<div class='card mx-auto' style='width: 80%; border:none; margin-top:5%'>
+  <form action="/" method="get">
+    <div class='mb-3 d-flex mx-auto' style='width: 30%; border:none'>
+      <label for='sort' class='input-group-text'>排序</label>
+      <select name="method" class="form-select" id="method">
+        <option selected>正序</option>
+        <option value="1">倒序</option>
+      </select>
+      <select name="sort" class="form-select" id="sort">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+    </div>
+    <div class='mb-3 d-flex mx-auto' style='width: 30%; border:none'>
+      <label for='category' class='input-group-text'>類別*</label>
+      <select name="category" class="form-select" id="category">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+    </div>
+  </form>
+  <div class='mb-3 d-flex mx-auto' style='width: 30%; border:none' id="totalAmount">
+    <ul class="list-group list-group-horizontal flex-fill ">
+      <li class="list-group-item list-group-item-warning">總金額</li>
+      <li class="list-group-item flex-fill">9</li>
+    </ul>
+  </div>
+  <div class="mx-auto">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th scope="col">收/支</th>
+          <th scope="col">類別</th>
+          <th scope="col">名稱</th>
+          <th scope="col">日期</th>
+          <th scope="col">金額</th>
+          <th scope="col">編輯</th>
+          <th scope="col">刪除</th>
+        </tr>
+      </thead>
+      <tbody>
+
+        <tr>
+          <th scope="row">支</th>
+          <td>食</td>
+          <td>午餐</td>
+          <td>2022/02/07</td>
+          <td>$$$</td>
+          <td><i class="fa-solid fa-pen-to-square"></i></td>
+          <td><i class="fa-solid fa-trash"></i></td>
+        </tr>
+
+        <tr>
+          <th scope="row">支</th>
+          <td>食</td>
+          <td>晚餐</td>
+          <td>2022/02/07</td>
+          <td>$$$</td>
+          <td><i class="fa-solid fa-pen-to-square"></i></td>
+          <td><i class="fa-solid fa-trash"></i></td>
+        </tr>
+        
+      </tbody>
+    </table>
+    
+  </div>
+
+</div>
