--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
-<html >
+<html>
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css">
+  <title>廣志の私帳</title>
 </head>
+
 <body>
   <header>
-    <nav>
-
+    <nav class="navbar bg-body-tertiary bg-dark ">
+      <div class="container-fluid mx-5">
+        <a href="/" class="navbar-brand text-light">廣志の私帳</a>
+        <div>
+          <a href="/login" class="btn btn-outline-success">Login</a>
+          <a href="/register" class="btn btn-outline-success">Register</a>
+        </div>
+      </div>
     </nav>
   </header>
   {{{body}}}
+  <script src="/javascript.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
+  <script src='https://kit.fontawesome.com/e46dde4966.js' crossorigin='anonymous'></script>
 </body>
+
 </html>
