--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,18 +10,9 @@
 </head>
 
 <body>
-  <header>
-    <nav class="navbar bg-body-tertiary bg-dark ">
-      <div class="container-fluid mx-5">
-        <a href="/" class="navbar-brand text-light">廣志の私帳</a>
-        <div>
-          <a href="/login" class="btn btn-outline-success">Login</a>
-          <a href="/register" class="btn btn-outline-success">Register</a>
-        </div>
-      </div>
-    </nav>
-  </header>
+  
   {{{body}}}
+  {{>messages}}
   <script src="/javascript.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
