--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,4 @@
+{{> navBar route ='login'}}
 <div class='card mx-auto' style='width: 18rem; border:none; margin-top:5%'>
   <h1 class=' mx-auto'>Login</h1>
   {{!-- {{> message}} --}}
@@ -15,8 +16,9 @@
       <div class='text-danger'>{{note}}</div>
       
 
-      <button type='submit' class='btn btn-primary d-block mx-auto mt-3' style="width: 16rem;">Submit</button>
+      <button type='submit' class='btn btn-primary d-block mx-auto mt-3' style="width: 16rem;">Local Login</button>
       <a href="/auth/facebook" class="btn btn-info btn-block mt-3 mx-auto d-block" style="width: 16rem;">Facebook Login</a>
+      <a href="/auth/google" class="btn btn-danger btn-block mt-3 mx-auto d-block" style="width: 16rem;">Google Login</a>
     </form>
     <p class="lead mt-4">
         No Account? <a href="/register">Register</a>
