--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,12 +1,13 @@
+{{> navBar logout='logout'}}
 <div class='card mx-auto' style='width: 25rem; border:none; margin-top:5%'>
   <h1 class=' mx-auto'>新增帳目</h1>
   {{!-- {{> message}} --}}
   <div class='card-body'>
-    <form action="/new" method="POST" >
+    <form action="/new" method="POST">
       <div class="mb-3 d-flex checktype">
-        <input class="btn-check" type="checkbox" id="costCheck" checked>
+        <input class="btn-check" type="checkbox" name="type" id="costCheck" value="支" checked>
         <label class="btn btn-outline-primary flex-fill" for="costCheck">支出</label>
-        <input class="btn-check " type="checkbox" id="incomeCheck">
+        <input class="btn-check " type="checkbox" name="type" id="incomeCheck" value="收">
         <label class="btn btn-outline-primary flex-fill" for="incomeCheck">收入</label>
       </div>
       <div class="mb-3 d-flex">
@@ -19,19 +20,23 @@
       </div>
       <div class='mb-3 d-flex'>
         <label for='category' class='input-group-text'>類別*</label>
-        <select name="category" class="form-select" id="category">
-          <option selected>Choose...</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
+        <select name="category" class="form-select" id="category" required>
+          <option value="">Choose...</option>
+          <option value="household">家居物業</option>
+        <option value="commute">交通出行</option>
+        <option value="entertainment">休閒娛樂</option>
+        <option value="catering">餐飲食品</option>
+        <option value="other">其他</option>
         </select>
       </div>
       <div class="mb-3 d-flex">
         <label for="cost" class="input-group-text">金額*</label>
-        <input type="number" id="cost" name="cost" class="form-control" min="0" value="{{cost}}">
+        <input type="number" id="cost" name="cost" class="form-control" min="1" value="{{cost}}">
       </div>
       <div class='text-danger note'>{{note}}</div>
       <button type='submit' class='btn btn-info d-block mx-auto mt-3 ' style="width: 16rem;">送出</button>
+      <a class="btn btn-outline-secondary d-block mx-auto mt-3" style="width: 16rem"
+        href="javascript:history.back()">Back</a>
     </form>
   </div>
 </div>
