--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,3 +1,4 @@
+{{> navBar route ='register'}}
 <div class='card mx-auto' style='width: 18rem; border:none; margin-top:5%'>
   <h1 class=' mx-auto'>Register</h1>
   {{!-- {{> message}} --}}
@@ -26,6 +27,7 @@
       <div class='text-danger note'>{{note}}</div>
       <button type='submit' class='btn btn-primary d-block mx-auto mt-3 ' style="width: 16rem;">Register</button>
       <a href="/auth/facebook" class="btn btn-info btn-block mt-3 mx-auto d-block" style="width: 16rem;">Facebook Login</a>
+      <a href="/auth/google" class="btn btn-danger btn-block mt-3 mx-auto d-block" style="width: 16rem;">Google Login</a>
     </form>
     <p class="lead mt-4">
       Have An Account? <a href="/login">Login</a>
