--- a/views/new.hbs
+++ b/views/new.hbs
@@ -19,14 +19,12 @@
         <input type='date' name='date' class='form-control' id='date' value="{{date}}" />
       </div>
       <div class='mb-3 d-flex'>
-        <label for='category' class='input-group-text'>類別*</label>
-        <select name="category" class="form-select" id="category" required>
+        <label for='categoryId' class='input-group-text'>類別*</label>
+        <select name="categoryId" class="form-select" id="categoryId" required>
           <option value="">Choose...</option>
-          <option value="household">家居物業</option>
-        <option value="commute">交通出行</option>
-        <option value="entertainment">休閒娛樂</option>
-        <option value="catering">餐飲食品</option>
-        <option value="other">其他</option>
+          {{#each categories}}
+          <option value="{{this._id}}">{{this.name}}</option>
+          {{/each}}
         </select>
       </div>
       <div class="mb-3 d-flex">
