--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,28 +2,25 @@
 <div class='card mx-auto' style='width: 80%; border:none; margin-top:5%'>
   <form action="/sorting" method="get">
     <div class='mb-3 d-flex mx-auto' style='width: 30%; border:none'>
-      <label for='sortmethod' class='input-group-text'>排序</label>
-      <select name="sortmethod" class="form-select" id="sortmethod" onchange='this.form.submit()' >
-        <option value="" selected>Choose...</option>
-        <option value="1">正序</option>
-        <option value="-1">倒序</option>
+      <label for='sortMethod' class='input-group-text'>排序</label>
+      <select name="sortMethod" class="form-select" id="sortMethod" onchange='this.form.submit()' >
+        <option value="-1"{{#ifCond sortMethod '-1'}}selected{{/ifCond}}>倒序</option>
+        <option value="1"{{#ifCond sortMethod '1'}}selected{{/ifCond}}>正序</option>
+        
       </select>
-      <select name="sort" class="form-select" id="sort" onchange='this.form.submit()'>
-        <option value="" selected>Choose...</option>
-        <option value="income">收入</option>
-        <option value="spending">支出</option>
-        <option value="category">類別</option>
-        <option value="name">名稱</option>
-        <option value="date">日期</option>
-        <option value="cost">金額</option>
+      <select name="sortTitle" class="form-select" id="sortTitle" onchange='this.form.submit()'>
+        <option value="date"{{#ifCond sortTitle 'date'}}selected{{/ifCond}}>日期</option>
+        <option value="category" {{#ifCond sortTitle 'category'}}selected{{/ifCond}}>類別</option>
+        <option value="name" {{#ifCond sortTitle 'name'}}selected{{/ifCond}}>名稱</option>
+        <option value="cost"{{#ifCond sortTitle 'cost'}}selected{{/ifCond}} >金額</option>
       </select>
     </div>
     <div class='mb-3 d-flex mx-auto' style='width: 30%; border:none'>
-      <label for='categorySearch' class='input-group-text'>類別*</label>
-      <select name="categorySearch" class="form-select" id="categorySearch" onchange='this.form.submit()'>
-        <option value="" selected>Choose...</option>
+      <label for='sortCategory' class='input-group-text'>類別*</label>
+      <select name="sortCategory" class="form-select" id="sortCategory" onchange='this.form.submit()'>
+        <option value="null" selected>Choose...</option>
         {{#each categories}}
-          <option value="{{this._id}}">{{this.name}}</option>
+          <option value="{{this._id}}" {{#ifCond this._id ../sortCategory}}selected{{/ifCond}}>{{this.name}}</option>
           {{/each}}
       </select>
     </div>
