--- a/views/partials/messages.hbs
+++ b/views/partials/messages.hbs
@@ -1,13 +1,19 @@
 
 {{#if success_messages}}
-<div class="alert alert-success alert-dismissible fade show mx-auto" role="alert" style='width: 50%; border:none; margin-top:5%'>
+<div class="alert alert-success alert-dismissible fade show mx-auto" role="alert" style='width: 50%; border:none'>
    {{ success_messages}}
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 {{/if}}
+{{#if warning_messages}}
+<div class="alert alert-warning alert-dismissible fade show mx-auto" role="alert" style='width: 50%; border:none'>
+   {{ warning_messages}}
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{{/if}}
 {{#if error_messages}}
-<div class="alert alert-warning alert-dismissible fade show mx-auto" role="alert" style='width: 50%; border:none; margin-top:5%'>
-   {{ error_messages}}
+<div class="alert alert-danger alert-dismissible fade show mx-auto" role="alert" style='width: 50%; border:none'>
+   {{error_messages}}
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 {{/if}}
