--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -29,8 +29,8 @@
       <a href="/auth/facebook" class="btn btn-info btn-block mt-3 mx-auto d-block" style="width: 16rem;">Facebook Login</a>
       <a href="/auth/google" class="btn btn-danger btn-block mt-3 mx-auto d-block" style="width: 16rem;">Google Login</a>
     </form>
-    <p class="lead mt-4">
+    {{!-- <p class="lead mt-4">
       Have An Account? <a href="/login">Login</a>
-    </p>
+    </p> --}}
   </div>
 </div>
