--- a/views/auth/resetPassword.hbs
+++ b/views/auth/resetPassword.hbs
@@ -1,4 +1,4 @@
-{{> navBar route ='register'}}
+{{> navBar route ='forgot'}}
 <div class='card mx-auto' style='width: 25rem; border:none; margin-top:5%'>
   <h1 class=' mx-auto'>Reset Password</h1>
   {{!-- {{> message}} --}}
