feat: redirect 404 page

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -22,7 +22,7 @@
     </form>
     <p class="lead mt-4">
         {{!-- No Account? <a href="/register">Register</a> --}}
-        <a href="/forgotPassword" class="nav-link btn btn-outline-secondary">forgot password?</a>
+        <a href="/passwordReset" class="nav-link btn btn-outline-secondary">forgot password?</a>
     </p>
   </div>
 </div>
